<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:fitsSystemWindows="true">

  <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20sp"
    android:paddingLeft="20sp"
    android:paddingRight="20sp">

    <ImageView
      android:id="@+id/iv_register_image"
      android:src="@drawable/register_image2"
      android:layout_width="match_parent"
      android:layout_height="220sp"
      android:layout_gravity="center"
      android:gravity="center"
      android:contentDescription="@string/cd_register_image"/>

    <EditText
      android:id="@+id/et_register_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/colorPrimary"
      android:inputType="textEmailAddress"
      android:textSize="18sp"
      android:hint="@string/email"
      tools:targetApi="lollipop"/>

    <EditText
      android:id="@+id/et_register_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/colorPrimary"
      android:textSize="18sp"
      android:inputType="textPassword"
      android:hint="@string/password"
      tools:targetApi="lollipop"/>

    <EditText
      android:id="@+id/et_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/colorPrimary"
      android:inputType="text"
      android:textSize="18sp"
      android:hint="@string/name"
      tools:targetApi="lollipop"/>

    <EditText
      android:id="@+id/et_location"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/colorPrimary"
      android:inputType="text"
      android:textSize="18sp"
      android:hint="@string/location"
      tools:targetApi="lollipop"/>

    <Button
      android:id="@+id/bt_submit_profile"
      android:onClick="register"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5sp"
      android:backgroundTint="@color/colorPrimaryAlpha80"
      android:textColor="@color/colorAlmostWhite"
      android:text="@string/submit"
      android:textSize="20sp"
      tools:targetApi="lollipop"/>

  </LinearLayout>
</ScrollView>
